Kubernetes/Ingress.yaml

{
  "kind": "Ingress",
  "apiVersion": "extensions/v1beta1",
  "metadata": {
    "name": "auth-service1",
    "namespace": "default"
  },
  "spec": {
    "rules": [
      {
        "host": "localhost",
        "http": {
          "paths": [
            {
              "backend": {
                "serviceName": "auth-service1",
                "servicePort": 5000
              }
            }
          ]
        }
      }
    ]
  }
}
